Fix paragraph spacing

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -200,6 +200,14 @@ body {
   }
 }
 
+p {
+  margin-top: 10px;
+}
+
+p:first-child {
+  margin-top: 0px;
+}
+
 .primary-text {
   font-style: normal;
   font-weight: normal;
